# RepuZK-contract

./: README.md  deployment.md  issues.md  pr.md  project.md  structure.md  task.md
issuer-registry/contracts/issuer-registry/: Cargo.toml
issuer-registry/contracts/issuer-registry/src/: issuer-registry.rs  issuer_registry.rs  lib.rs  test.rs
issuer-registry/contracts/issuer-registry/test_snapshots/test/: test_add_and_get_issuer.1.json  test_add_duplicate_issuer.1.json  test_get_all_and_active_issuers.1.json  test_initialize.1.json  test_issue_credential.1.json  test_register_and_verify_credential_type.1.json  test_remove_issuer.1.json  test_transfer_admin.1.json  test_update_issuer_status.1.json
marketplace/contracts/market/: Cargo.toml
marketplace/contracts/market/src/: lib.rs  marketplace.rs  test.rs
reputation-registry/contracts/reputation-registry/: Cargo.toml
reputation-registry/contracts/reputation-registry/src/: lib.rs  reputation_registry.rs  test.rs
