[package]
name = "market"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
issuer-registry = { path = "../../../issuer-registry/contracts/issuer-registry" }
reputation-registry = { path = "../../../reputation-registry/contracts/reputation-registry" }
